# cmake-object-libraries

./: .clang-format  CMakeLists.txt
core/database/: CMakeLists.txt  database.hpp
core/io/: CMakeLists.txt  io.hpp
core/sample_app/: sample_app.cpp
libraries/core/: CMakeLists.txt
libraries/core/database/: CMakeLists.txt  database.hpp
libraries/core/database/private/: database.cpp
libraries/core/io/: CMakeLists.txt  io.hpp
libraries/core/io/private/: io.cpp
sample_app/: CMakeLists.txt
